# Chess

./: CMakeLists.txt  Game.cpp  Game.h  README.md  conanfile.txt  main.cpp
actions/: Action.cpp  Action.h  MoveAction.cpp  MoveAction.h  State.cpp  State.h
board/: Board.cpp  Board.h
event/: EventManager.cpp  EventManager.h
factory/: PieceFactory.cpp  PieceFactory.h  Util.h
game/: Game.cpp  Game.h
observer/: CheckObserver.cpp  CheckObserver.h
pair/: PairHash.h
piece/: Bishop.cpp  Bishop.h  CheckObserver.cpp  CheckObserver.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Pieces.cpp  Pieces.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
resources/: board.jpg.h  pieces.png.h
texture/: Texture.cpp  Texture.h
undo/: UndoManager.cpp  UndoManager.h
